--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
 
     </nav>
     <!-- -----------end navbar--------------------->
-
-    <!-- <div class="header head-fontsize">
-        <p> <span>Anta</span>planet </p>
-    </div> -->
     <!-- ---------------------------intro to Antarctica------------ -->
 
     <div class="z-order intro-section">
@@ -152,8 +148,8 @@
 
     </div>
     <!-- ---------------------------floated images section------------- -->
-    <div class="container z-order">
-        <h4 id="ice" class="title head-fontsize">Ice</h4>
+    <div class="container z-order decor-img>
+        <h4 id=" ice" class="title head-fontsize">Ice</h4>
         <p class="text-fontsize">
             Antarctica is about 98 percent covered in ice. There's 30 million cubic kilometers of ice, or 90 percent of
             all
@@ -188,7 +184,7 @@
     </div>
     <div class="space"></div>
 
-    <div class="container z-order">
+    <div class="container z-order decor-img">
         <h4 id="animals" class="title head-fontsize">Animal kingdom</h4>
         <p class="text-fontsize">
             Preserved by the Antarctic Treaty, Antarctica is home to some of the world’s most extraordinary species.
@@ -211,7 +207,7 @@
     </div>
 
     <div class="space"></div>
-    <div class="container z-order">
+    <div class="container z-order decor-img">
         <h4 id="History" class="title head-fontsize">History</h4>
 
 
@@ -242,55 +238,57 @@
     <!-- -----------------------end floated images section----------------- -->
     <div class="space"></div>
     <!-- ---------------------- lake section-------------------  -->
+    <div class="container decor-img">
+        <h4 id="lakes" class="title head-fontsize z-order">Subglacial lakes</h4>
+        <div class="first-column text-fontsize">You may be surprised, but there are also lakes in Antarctica. However,
+            some are not so easy to find.
+            They are located deep under the thick ice sheet. About 145 have been inventoried. Most are located in East
+            Antarctica.
 
-    <h4 id="lakes" class="title head-fontsize z-order">Subglacial lakes</h4>
-    <div class="first-column text-fontsize">You may be surprised, but there are also lakes in Antarctica. However,
-        some are not so easy to find.
-        They are located deep under the thick ice sheet. About 145 have been inventoried. Most are located in East
-        Antarctica.
+            The largest of the Antarctic subglacial lakes is Lake Vostok, which lies almost four kilometres below
+            the
+            ice sheet.
+            Other well-known lakes include Lake Ellsworth and Lake Whillans, both in West Antarctica. In
+            2012
+            Russia managed to drill all the way to Lake Vostok. In 2013, U.S. scientists reached the waters of Lake
+            Whillans. Britain began drilling for Lake Ellsworth in 2012, but due to technical problems, the project
+            has
+            been temporarily halted.</div>
+        <div class="lake-container z-order">
 
-        The largest of the Antarctic subglacial lakes is Lake Vostok, which lies almost four kilometres below
-        the
-        ice sheet.
-        Other well-known lakes include Lake Ellsworth and Lake Whillans, both in West Antarctica. In
-        2012
-        Russia managed to drill all the way to Lake Vostok. In 2013, U.S. scientists reached the waters of Lake
-        Whillans. Britain began drilling for Lake Ellsworth in 2012, but due to technical problems, the project
-        has
-        been temporarily halted.</div>
-    <div class="lake-container z-order">
+            <div class="lake-text1 text-fontsize">
+                Scientists are particularly interested in these lakes under the ice sheet. The water is cut off from the
+                outside world for a very long time (in the case of Lake Vostok for more than 20 million
+                years).Scientists
+                hope to find new life forms that give us a glimpse back in time. And if life were to be found in the
+                lakes,
+                it means that life could exist in much more extreme places than was thought possible until now,
+                including on
+                other planets.In 2013, British scientists already found traces of life in Lake Hodgson (Antarctic
+                Peninsula). In the
+                sediments at the bottom they found microbes.</div>
+            <div class="lake-image">
+                <img class="decor-img"
+                    src="https://d3bkbkx82g74b8.cloudfront.net/eyJidWNrZXQiOiJsYWJyb290cy1hc3NldHMiLCJrZXkiOiJfcHVibGljXC9fZmlsZXNcL3N5c3RlbVwvY2tcL3RyZW5kaW5nXC9mcnl4ZWxsc2VlLTU1MzAyOF85NjBfNzIwX2ZlYTM0MTZmOWVjZjAxZTRmMmU3OGY1Mzg0Y2EzZDhjLmpwZyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NzAwLCJmaXQiOiJjb3ZlciJ9fX0="
+                    alt="">
+                <!-- <img src="https://media.cntraveler.com/photos/5720de19a1d0c8fd663d398c/16:9/w_2560%2Cc_limit/iceberg-antarctica-penguins-GettyImages-126249208.jpg" alt=""> -->
 
-        <div class="lake-text1 text-fontsize">
-            Scientists are particularly interested in these lakes under the ice sheet. The water is cut off from the
-            outside world for a very long time (in the case of Lake Vostok for more than 20 million years).Scientists
-            hope to find new life forms that give us a glimpse back in time. And if life were to be found in the
-            lakes,
-            it means that life could exist in much more extreme places than was thought possible until now,
-            including on
-            other planets.In 2013, British scientists already found traces of life in Lake Hodgson (Antarctic
-            Peninsula). In the
-            sediments at the bottom they found microbes.</div>
-        <div class="lake-image">
-            <img class="decor-img"
-                src="https://d3bkbkx82g74b8.cloudfront.net/eyJidWNrZXQiOiJsYWJyb290cy1hc3NldHMiLCJrZXkiOiJfcHVibGljXC9fZmlsZXNcL3N5c3RlbVwvY2tcL3RyZW5kaW5nXC9mcnl4ZWxsc2VlLTU1MzAyOF85NjBfNzIwX2ZlYTM0MTZmOWVjZjAxZTRmMmU3OGY1Mzg0Y2EzZDhjLmpwZyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NzAwLCJmaXQiOiJjb3ZlciJ9fX0="
-                alt="">
-            <!-- <img src="https://media.cntraveler.com/photos/5720de19a1d0c8fd663d398c/16:9/w_2560%2Cc_limit/iceberg-antarctica-penguins-GettyImages-126249208.jpg" alt=""> -->
+            </div>
+
+            <div class="lake-text2 text-fontsize">
+
+
+                In the upper layers, they discovered living microbes. At
+                greater depths (3.2 meters deep), they found remnants of microbes that lived there about 100,000 years
+                ago.
+                And that in particularly extreme circumstances. The lake has been covered in ice for at least 100,000
+                years.
+                All this time, these microbes have had no contact with the outside world and lived in the dark.
+
+                Microorganisms are also teeming in Lake Whillans, as became known in August 2014. In the water samples
+                examined, scientists found mainly single-celled organisms called Archaea.</div>
 
         </div>
-
-        <div class="lake-text2 text-fontsize">
-
-
-            In the upper layers, they discovered living microbes. At
-            greater depths (3.2 meters deep), they found remnants of microbes that lived there about 100,000 years
-            ago.
-            And that in particularly extreme circumstances. The lake has been covered in ice for at least 100,000
-            years.
-            All this time, these microbes have had no contact with the outside world and lived in the dark.
-
-            Microorganisms are also teeming in Lake Whillans, as became known in August 2014. In the water samples
-            examined, scientists found mainly single-celled organisms called Archaea.</div>
-
     </div>
     <!-- -------------------------end lake section-------------------  -->
     <div class="space"></div>
@@ -303,6 +301,22 @@
         geometric pancake ice, literally untouched mountains rear from marine mist, and wildlife lives, year in and year
         out, to its own rhythms, quite apart from human concerns. To let our minds soar in a place nearly free of
         humankind’s imprint: this is magic</p>
+         <!-- ----------------------------creativity section-------------------- -->
+    <section class="decor-img seals z-order">
+
+        <div class="bubbels">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
+
+        </div>
+
+
+    </section>
     <!-- -----------cards section--------- -->
 
     <div class="wraper z-order">
@@ -380,22 +394,7 @@
     </div>
     <!-- ----------------------------------end highlights section----------------------- -->
     <div class="space"></div>
-    <!-- ----------------------------creativity section-------------------- -->
-    <section class="decor-img seals z-order">
-
-        <div class="bubbels">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-            <img src="https://cdn.pixabay.com/photo/2013/07/13/10/43/blue-157652_960_720.png" alt="bubbles">
-
-        </div>
-
-
-    </section>
+   
     <div class="space"></div>
     <footer>
         <Div class="footer-columns text-fontsize">
