--- a/index.html
+++ b/index.html
@@ -143,10 +143,8 @@
 
     </form>
     <!-- ----------------------------------end quiz form---------------------- -->
-    <div class="arrow-up"> <a href="#logo-div"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a></div>
-    <div class="space">
-
-    </div>
+    
+    <div class="space"> </div>
     <!-- ---------------------------floated images section------------- -->
     <div class="container z-order border">
         <h4 id="ice" class="title head-fontsize">Ice</h4>
@@ -394,6 +392,7 @@
         </div>
     </div>
     <!-- ----------------------------------end highlights section----------------------- -->
+    <div class="arrow-up"> <a href="#logo-div"><i class="fa fa-angle-double-up" aria-hidden="true"></i></a></div>
     <div class="space"></div>
 
     <footer class="border">
