--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
     <footer class="border">
 
         <Div class="footer-columns text-fontsize">
-            <p> <a href="#"><i class="contact fa fa-instagram" aria-hidden="true"></i></a> </p>
-            <a href="#"><i class="contact fa fa-twitter" aria-hidden="true"></i></a>
-            <a href="#"><i class="contact fa fa-facebook-square" aria-hidden="true"></i></a>
+            <p> <a href=""><i class="contact fa fa-instagram" aria-hidden="true"></i></a> </p>
+            <a href=""><i class="contact fa fa-twitter" aria-hidden="true"></i></a>
+            <a href=""><i class="contact fa fa-facebook-square" aria-hidden="true"></i></a>
         </Div>
         <p class="footer-columns text-fontsize">Powered by Reema Alshohof&copy;2021</p>
         <p class="footer-columns text-fontsize"> <a
