--- a/index.html
+++ b/index.html
@@ -358,10 +358,8 @@
                 are a sight to behold: squawking, gamboling birds, hatching, molting, and caring for their young
             </p> <!--  ---this is for the text  z-order 5---- -->
             <div id="card1bg" class="card-cover"></div> <!-- ----------this is the cover background  z-order4----- -->
-            <div class="card-title"></div>
+            <div class="card-title head-fontsize">meet the penguins</div>
             <!-----------this is the title background in order to give it opacity z-order3-->
-            <p class="title-text head-fontsize">Meet The Penguins</p>
-            <!------------------this is the title z-order2-->
         </div>
 
 
@@ -378,8 +376,8 @@
                 magnificent
                 glacier views. If you’re lucky, perhaps you’ll even see one calving.</p>
             <div id="card2bg" class="card-cover"></div>
-            <div class="card-title"></div>
-            <P class="title-text head-fontsize">Paradise Harbor</P>
+            <div class="card-title head-fontsize">Paradise Harbor</div>
+            <!-- <P class="title-text head-fontsize">Paradise Harbor</P> -->
 
         </div>
         <div class="box border z-order">
@@ -393,8 +391,8 @@
                 eruption-induced mudflow and flood. Some will stop for a quick dip in the island’s heated geothermal
                 currents.</p>
             <div id="card3bg" class="card-cover"></div>
-            <div class="card-title"></div>
-            <P class="title-text head-fontsize">Deception Island</P>
+            <div class="card-title head-fontsize">Deception Island</div>
+            <!-- <P class="title-text head-fontsize">Deception Island</P> -->
         </div>
         <div class="box border z-order">
             <div class="card4"></div>
@@ -407,8 +405,8 @@
                 ‘fffffffffffffff!’ right next to your boat, leaving you bathed in fish-scented mist. Near the ice edge,
                 look for orcas hunting in pods.</p>
             <div id="card4bg" class="card-cover"></div>
-            <div class="card-title"></div>
-            <p class="title-text head-fontsize">Whale Encounter</p>
+            <div class="card-title head-fontsize">Whale Encounter</div>
+            <!-- <p class="title-text head-fontsize">Whale Encounter</p> -->
 
 
 
